--- a/1-Expanding Cards/style.css
+++ b/1-Expanding Cards/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 * {
-  margin: 0;
+  box-sizing: border-box;
 }
 
-.body {
+body {
   font-family: 'Muli' 'sans-serif';
   display: flex;
   align-items: center;
@@ -24,14 +24,14 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vw;
+  height: 80vh;
   border-radius: 50px;
   color: #fff;
   cursor: pointer;
   flex: 0.5;
   margin: 10px;
   position: relative;
-  -webkit-transition: all 700ms ease-in;
+  transition: all 700ms ease-in;
 }
 
 .panel h3 {
